# inkypi

./: .gitignore  OVERLAY_FEATURE_README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: python-app.yml
docs/: OVERLAY_DOCUMENTATION_INDEX.md  OVERLAY_FEATURE_SUMMARY.md  plugin_overlay_comparison.md  plugin_overlay_implementation_plan.md  plugin_overlay_research.md  troubleshooting.md
install/: debian-requirements.txt  inkypi  inkypi.service  install.sh  requirements-dev.txt  requirements.txt  shutdown_display.sh  uninstall.sh  update.sh  update_vendors.sh
scripts/: poc_image_overlay.py  test_plugin.py
src/: config.py  inkypi.py  model.py  refresh_task.py  shutdown_display.py
src/blueprints/: main.py  playlist.py  plugin.py  settings.py
src/display/: abstract_display.py  display_manager.py  inky_display.py  mock_display.py  waveshare_display.py
src/display/waveshare_epd/: epd13in3E.py  epdconfig.py
src/plugins/: plugin_registry.py
src/plugins/ai_image/: ai_image.py
src/plugins/ai_text/: ai_text.py
src/plugins/apod/: apod.py
src/plugins/base_plugin/: base_plugin.py
src/plugins/calendar/: calendar.py
src/plugins/clock/: clock.py
src/plugins/comic/: comic.py  comic_parser.py
src/plugins/countdown/: countdown.py
src/plugins/github/: github.py  github_contributions.py  github_sponsors.py  github_stars.py
src/plugins/image_album/: image_album.py
src/plugins/image_folder/: image_folder.py
src/plugins/image_upload/: image_upload.py
src/plugins/image_url/: image_url.py
src/plugins/newspaper/: newspaper.py
src/plugins/rss/: rss.py
src/plugins/screenshot/: screenshot.py
src/plugins/text/: plugin-info.json  settings.html  text.py
src/plugins/text/render/: text.css  text.html
src/plugins/todo_list/: todo_list.py
src/plugins/unsplash/: unsplash.py
src/plugins/weather/: weather.py
src/plugins/weather/render/: weather.css
src/plugins/wpotd/: wpotd.py
src/plugins/year_progress/: year_progress.py
src/utils/: app_utils.py  image_utils.py
tests/: test_model.py  test_shutdown_display.py
